--- a/css/style.css
+++ b/css/style.css
@@ -295,11 +295,11 @@ footer p{
 
 /*Responsive*/
 
-@media screen and (max-width:576px) {
+@media screen and (max-width:646px) {
     .nav_bar nav{
         display: flex;
         justify-content: space-between;
-        width: 70%;
+        width: 100%;
     }
     .content1{
         display: flex;
@@ -318,16 +318,16 @@ footer p{
         color: white;
         margin:0%;
         font-size: 400%;
+        padding-right: 10%;
     }
     #aside1 p{
         color: white;
-        font-size: 20px;
-        margin-top: 2%;
-        margin-left: 29.5%;
+        margin-left: 0;
+        margin-left: 21%;
+        margin-top: 4%;
     }
     #aside1 .botones{
         display: flex;
-        flex-direction: row;
         justify-content: space-around;
         margin: 0%;
         width: 36%;
@@ -336,6 +336,7 @@ footer p{
         border: 2px solid;
         border-color: rgb(136, 136, 136);
         border-radius: 5px;
+        margin-right: 10%;
     }
     #aside2{
         display: flex;
@@ -360,6 +361,12 @@ footer p{
         flex-direction: column;
         justify-content: center;
         background-color: #F1F2F7;
+    }
+    .content2 h1{
+        width: 100%;
+        color: #F41486;
+        font-size: 50px;
+        text-align: center;
     }    
     .art1{
         width: 100%;
@@ -367,14 +374,22 @@ footer p{
         justify-content: center;
         align-items: center;
     }
+    .art1 img{
+        margin-left:0px;
+    }
     .art2{
         display: flex;
         font-size: 20px;
         width: 100%;
         height: 50%;
-        flex-direction: column;
-        padding-left: 15%;       
+        flex-direction: column; 
+        align-items: center;      
         margin-bottom: 2%;
+        padding: 0;
+    }
+    .art2 p{
+        width: 50%;
+        padding-right:10% ;
     }
     .art2 ul{
         margin-top: 2%;
@@ -382,13 +397,25 @@ footer p{
         padding-left: 3%;
         list-style: url(../images/chulito.png);
         color: black;
+        padding-right:17% ;
+    }
+    .art2 ul li{
+        width: 50%;
+        margin:0;
+        padding:0;
+        
     }
     .art2 h4{
         margin: 0;
         color: #F41486;
+        margin:0;
+        width: 50%;
+        padding-right:10% ;
     }
     .art2 h2{
         color: #C44185;
+        margin:0;
+        width: 60%;
     }
     article{
         width: 100%;
@@ -479,5 +506,239 @@ footer p{
         margin-bottom: 2%;
         padding-top: 10px;
         padding-bottom: 10px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .nav_bar{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 100%;
+        background: #1E172F;
+        color: rgb(255, 255, 255);
+    }
+    .nav_bar nav{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .nav_bar ul{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 90%;
+        list-style: none;
+    }
+    .content1{
+        display: flex;
+        width: 100%;
+    }
+    #aside1{
+        display: flex;
+        width: 100%;
+        background-color: #2E2550;
+    }
+    #aside1 h1{
+        color: white;
+        font-size: 400%;
+
+    }
+    #aside1 p{
+        color: white;
+        width: 50%;
+        margin-right: 20%;
+    }
+    #aside1 .botones{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 36%;
+        height: 12%;
+        margin-right:12% ;
+        padding: 0.5%;
+        border: 2px solid;
+        border-color: rgb(136, 136, 136);
+        border-radius: 5px;
+    }
+    #aside2{
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        background-image: url(../images/Canva-Withered-Leaves-Photo.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .content2{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        background-color: #F1F2F7;
+    }
+    .content2 h1{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        color: #F41486;
+        font-size: 60px;
+        text-align: center;
+    }
+    
+    .art1{
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+        width: 100%;
+        height: 50%;
+    }
+    .art1 img{
+        width: 70%;
+        height: 40%;
+    }
+    .art2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        width: 100%;
+        height: 50%;
+    }
+    .art2 ul{
+        display: flex;
+        flex-direction:column;
+        list-style: url(../images/chulito.png);
+        align-items: center;
+        color: black;
+        width: 70%;
+    }
+    .art2 ul li{
+        width: 70%;  
+    }
+    .art2 h4{
+        display: flex;
+        justify-content: start;    
+        color: #F41486;
+        width: 70%;
+        padding-left: 10%;
+    }
+    .art2 p{
+        display: flex;
+        justify-content: center;
+        width: 70%;
+        margin: 0;
+        padding: 0;
+        padding-top:2%;
+        padding-bottom:2%;
+    }
+    .art2 h2{
+        display: flex;
+        justify-content: center;
+        color: #C44185;
+        margin: 0;
+    }
+    article{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #1E172F;
+    }
+    article h1{
+        display: flex;
+        justify-content: center;
+        width: 90%;
+        font-size: 50px;
+        color: white;
+    }
+    article p.part{
+        width: 90%;
+        font-size: 20px;
+        color: white;
+        margin: 0;
+    }
+    .box{
+        width: 70%;
+        height: 670px;
+        background-color: rgb(255, 255, 255);
+        color: rgb(0, 0, 0);
+        border-radius: 5px;
+        margin-bottom: 20px;
+    }
+    .box ul{
+        margin-top: 20%;
+        color: black;
+        list-style: url(../images/blackChulito.png);
+        font-size: 25px;
+        padding-right:10%;
+    }   
+    .box h3{
+        color: #000000;
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
+    .box h3.lite{
+        color: #F41486;
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
+    .box p{
+        font-size: 17px;
+        margin-top:2%;
+    }
+    .box p.p1{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        background-color: #F5F5F5;
+        font-size: 240%;
+        margin-top: 10%;
+        height: 10%;
+    }
+    p.p1 sup{
+        font-size: 50%;
+    }
+    .box .but,.but1{
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        background-color: #F5F5F5;
+        margin-top: 10%;
+    }
+    .box .buto1{
+        background: linear-gradient(to right,#EC5FA7,#F31D8A);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        font-size: 22px;
+    }
+    footer{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        background-color: rgb(204, 203, 203);
+        width: 100%;
+        height: 20%;
+    } 
+    footer p{
+        padding: 2%;
+        margin: 0;
+        font-size: 12px;
+    }
+    .finalList ul{
+        display: flex;
+        align-items: center;
+        margin: 0;
+        padding: 2%;
+        justify-content: end;
+        width: 100%;
+        list-style: none;
+    }
+    .finalList ul li{
+        margin: 1%;
+        padding: 1%;
     }
 }
