--- a/css/style.css
+++ b/css/style.css
@@ -296,18 +296,14 @@ footer p{
 /*Responsive*/
 
 @media screen and (max-width:600px) {
-    .nav_bar nav{
+    .nav_bar{
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .nav_bar nav{
         width: 100%;
-        padding: 0;
     }
-    nav ul button{
-        width: 20%;
-        height: 100%;
-        padding: 0;
-        margin: 0;
-    }
+    
     .content1{
         display: flex;
         flex-direction: column;
@@ -325,13 +321,10 @@ footer p{
         color: white;
         margin:0%;
         font-size: 400%;
-        padding-right: 10%;
     }
     #aside1 p{
         color: white;
-        margin-left: 0;
-        margin-left: 21%;
-        margin-top: 4%;
+        
     }
     #aside1 .botones{
         display: flex;
@@ -343,7 +336,6 @@ footer p{
         border: 2px solid;
         border-color: rgb(136, 136, 136);
         border-radius: 5px;
-        margin-right: 10%;
     }
     #aside2{
         display: flex;
@@ -372,7 +364,7 @@ footer p{
     .content2 h1{
         width: 90%;
         color: #F41486;
-        font-size: 40px;
+        font-size: 3em;
         text-align: center;
     }    
     .art1{
