--- a/css/style.css
+++ b/css/style.css
@@ -295,19 +295,27 @@ footer p{
 
 /*Responsive*/
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:480px) {
     .nav_bar{
         display: flex;
         flex-wrap: wrap;
+        margin: 0;
+        padding: 0;
     }
     .nav_bar nav{
         width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 10%;
     }
     
     .content1{
         display: flex;
         flex-direction: column;
         width: 100%;
+        margin: 0;
+        padding: 0;
     }
     #aside1{
         display: flex;
@@ -316,21 +324,26 @@ footer p{
         flex-direction: column;
         align-items: center;
         background-color: #2E2550;
+        padding-bottom: 5%;
     }
     #aside1 h1{
         color: white;
-        margin:0%;
-        font-size: 400%;
+        font-size: 3.5em;
+        margin: 0;
+        width: 50%;
+        padding-bottom: 5%;
     }
     #aside1 p{
         color: white;
-        
+        margin: 0;
+        width: 50%;
+        padding-bottom: 5%;
     }
     #aside1 .botones{
         display: flex;
         justify-content: space-around;
         margin: 0%;
-        width: 36%;
+        width: 40%;
         height: 12%;
         padding: 0.5%;
         border: 2px solid;
@@ -349,9 +362,8 @@ footer p{
         background-size: cover;
     }
     #aside2 img{
-        margin:0px;
-        padding: 0px;
-        width: 18%;
+        padding: 0;
+        width: 25%;
         height: 66%;
     }
     .content2{
@@ -360,9 +372,11 @@ footer p{
         flex-direction: column;
         justify-content: center;
         background-color: #F1F2F7;
+        margin: 0;
+        padding: 0;
     }
     .content2 h1{
-        width: 90%;
+        width: 100%;
         color: #F41486;
         font-size: 3em;
         text-align: center;
@@ -372,22 +386,36 @@ footer p{
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 0;
+        padding: 0;
     }
     .art1 img{
         margin-left:0px;
+        margin-bottom: 10%;
     }
     .art2{
         display: flex;
-        font-size: 20px;
+        font-size: 1.5em;
         width: 100%;
         height: 50%;
         flex-direction: column; 
-        align-items: center;      
-        margin-bottom: 2%;
+        align-items: center; 
+        margin: 0;     
         padding: 0;
+        margin-bottom: 2%;
+    }
+    .art2 h2{
+        display: flex;
+        justify-content: center;
+        color: #C44185;
+        margin:0;
+        width: 100%;
+        
     }
     .art2 p{
-        width: 50%;
+        display: flex;
+        justify-content: center;
+        width: 65%;
         
     }
     .art2 ul{
@@ -408,11 +436,7 @@ footer p{
         margin:0;
         width: 50%;
     }
-    .art2 h2{
-        color: #C44185;
-        margin:0;
-        width: 60%;
-    }
+    
     article{
         width: 100%;
         height: 100%;
@@ -420,19 +444,21 @@ footer p{
         justify-content: center;
         text-align: center;
         background-color: #1E172F;
+        margin: 0;
+        padding: 0;
     }
     article h1{
         width: 100%;
-        font-size: 60px;
+        font-size: 3em;
         color: white;
     }
     article p.part{
         width: 100%;
-        font-size: 17px;
+        font-size: 1em;
         color: white;
     }
     .box{
-        width: 50%;
+        width: 70%;
         height: 558px;
         background-color: rgb(255, 255, 255);
         color: rgb(0, 0, 0);
@@ -478,12 +504,12 @@ footer p{
         flex-direction: row;
         justify-content: center;
         background-color: #F5F5F5;
-        font-size: 240%;
+        font-size: 2em;
         margin-top: 10%;
         height: 10%;
     }
     p.p1 sup{
-        font-size: 50%;
+        font-size: 0.5em;
     }
     .box .but,.but1{
         border-bottom-left-radius: 5px;
@@ -496,11 +522,17 @@ footer p{
         border: none;
         border-radius: 5px;
         width: 60%;
-        font-size: 22px;
+        font-size: 1em;
         margin-top: 2%;
-        margin-bottom: 2%;
-        padding-top: 10px;
-        padding-bottom: 10px;
+        
     }
+    footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    
 }
 
